--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
+    "@types/styled-components-react-native": "^5.2.5",
     "expo": "~52.0.38",
     "expo-modules-core": "^2.2.3",
     "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.76.7",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
